samples/_failures_safe/1761300512_fceedb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e382c67.c: In function ‘main’:
./samples/SAFE/__tmp_3e382c67.c:140:9: error: ‘display’ undeclared (first use in this function)
  140 |         display
      |         ^~~~~~~
./samples/SAFE/__tmp_3e382c67.c:140:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3e382c67.c:140:16: error: expected ‘;’ at end of input
  140 |         display
      |                ^
      |                ;
./samples/SAFE/__tmp_3e382c67.c:140:9: error: expected declaration or statement at end of input
  140 |         display
      |         ^~~~~~~
./samples/SAFE/__tmp_3e382c67.c:140:9: error: expected declaration or statement at end of input
